reading csv data with pandas

--- a/ml_basics.ipynb
+++ b/ml_basics.ipynb
@@ -1269,6 +1269,19 @@
    "id": "46231869-95cc-42c9-85ca-2f695c8321d7",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#Read and print the data set:\n",
+    "import pandas\n",
+    "df = pandas.read_csv(\"data2.csv\")\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2dd848c1-89ad-42d3-94e3-d43c2172b6d1",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
