Feature Selection for Supervised Classification using RandomForest ensemble classifier

--- a/ml_basics_part2 (classification)/ml_basics_part2_classification.ipynb
+++ b/ml_basics_part2 (classification)/ml_basics_part2_classification.ipynb
@@ -4097,9 +4097,7 @@
   {
    "cell_type": "markdown",
    "id": "dd0ce040-d14c-401d-bc4a-08cb28938256",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "\n",
     "# SVM ML Algorithm\n",
@@ -4141,6 +4139,146 @@
     "---\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3abdbffb-ee8d-4f24-a9d1-c18843f95736",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 1.0\n",
+      "Precision: 1.0\n",
+      "Recall: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1. Environment Setup\n",
+    "#First, make sure you have Python installed on your system. Then, install the necessary libraries (if\n",
+    "#you have not already) by running the following command:\n",
+    "#pip install numpy scipy scikit-learn matplotlib\n",
+    "#pip install numpy pandas matplotlib scikit-learn\n",
+    "\n",
+    "#2. Loading the Dataset\n",
+    "from sklearn import datasets\n",
+    "\n",
+    "# Load dataset\n",
+    "iris = datasets.load_iris()\n",
+    "X = iris.data\n",
+    "y = iris.target\n",
+    "\n",
+    "#3. Exploratory Data Analysis (Optional)\n",
+    "#You can use pandas, matplotlib, and seaborn to explore the dataset, but we'll skip this step to focus on SVM.\n",
+    "\n",
+    "#4. Preprocessing the Data\n",
+    "#We will split the data into training and testing sets:\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Split dataset into training set and test set\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "\n",
+    "# 70% training and 30% testing\n",
+    "#5. Training the SVM Model\n",
+    "#We'll use the SVC (Support Vector Classification) class from Scikit-learn:\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "\n",
+    "# Create a SVM Classifier\n",
+    "model = SVC(kernel='linear') # Linear Kernel\n",
+    "\n",
+    "# Train the model using the training sets\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict the response for test dataset\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "#6. Model Evaluation\n",
+    "#Let's evaluate the model:\n",
+    "# Import metrics module\n",
+    "from sklearn import metrics\n",
+    "\n",
+    "# Model Accuracy: how often is the classifier correct?\n",
+    "print(\"Accuracy:\", metrics.accuracy_score(y_test, y_pred))\n",
+    "\n",
+    "# Model Precision: what percentage of positive tuples are labeled as such?\n",
+    "print(\"Precision:\", metrics.precision_score(y_test, y_pred, average='macro'))\n",
+    "\n",
+    "# Model Recall: what percentage of positive tuples are labelled as such?\n",
+    "print(\"Recall:\", metrics.recall_score(y_test, y_pred, average='macro'))\n",
+    "\n",
+    "#7. Visualization of the Decision Boundary (Optional)\n",
+    "#Visualizing the decision boundary for SVM can be complex with multifeature datasets, and it's\n",
+    "#usually done for 2D data for simplicity.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a2fd335-d671-4415-8521-7f847755457b",
+   "metadata": {},
+   "source": [
+    "# Feature Selection for Supervised Classification using RandomForest ensemble classifier #"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "df558e0c-09b2-429f-9c4e-b445876184be",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (51245063.py, line 14)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[9], line 14\u001b[0;36m\u001b[0m\n\u001b[0;31m    Selected Feature Indices: [ 5 18]\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate a synthetic dataset for binary classification\n",
+    "X, y = make_classification(n_samples=1000, n_features=20, n_classes=2, random_state=42)\n",
+    "# Split the data into training and testing sets (80% training, 20% testing)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "# Feature selection using SelectKBest with chi-squared test (can be replaced with other methods)\n",
+    "k = 10 # Number of top features to select\n",
+    "\n",
+    "selector = SelectPercentile(score_func=f_classif, percentile=10) # Adjust percentile as needed\n",
+    "X_train_selected = selector.fit_transform(X_train, y_train)\n",
+    "X_test_selected = selector.transform(X_test)\n",
+    "# Print selected features (optional)\n",
+    "selected_feature_indices = selector.get_support(indices=True)\n",
+    "print(\"Selected Feature Indices:\", selected_feature_indices)\n",
+    "Selected Feature Indices: [ 5 18]\n",
+    "# Train a classifier on the selected features\n",
+    "clf = RandomForestClassifier(random_state=42)\n",
+    "clf.fit(X_train_selected, y_train)\n",
+    "\n",
+    "# Make predictions\n",
+    "y_pred = clf.predict(X_test_selected)\n",
+    "\n",
+    "# Evaluate accuracy on the testing set\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(\"Accuracy with Feature Selection:\", accuracy)\n",
+    "\n",
+    "# Train a classifier on all features (for comparison)\n",
+    "clf_all = RandomForestClassifier(random_state=42)\n",
+    "clf_all.fit(X_train, y_train)\n",
+    "y_pred_all = clf_all.predict(X_test)\n",
+    "accuracy_all = accuracy_score(y_test, y_pred_all)\n",
+    "print(\"Accuracy with All Features:\", accuracy_all)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be948bd6-368e-41be-9547-958ea515dcab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
