K-Nearest Neighbors (KNN) for Classification

--- a/ml_basics_part2 (classification)/ml_basics_part2_classification.ipynb
+++ b/ml_basics_part2 (classification)/ml_basics_part2_classification.ipynb
@@ -4394,9 +4394,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "abaed543-bd72-4c3e-b73a-f02af57ff3e3",
+   "metadata": {},
+   "source": [
+    "# K-Nearest Neighbors (KNN) for Classification #\n",
+    "\n",
+    "- Objective: Classify fruits based on their features (weight, texture) using the kNN algorithm.\n",
+    "\n",
+    "- Input: Fruits' features (weight in grams, texture: 0 for smooth, 1 for bumpy) and corresponding labels (0 for apple, 1 for orange)\n",
+    "\n",
+    "- Output: Prediction of fruit type for new fruits based on their features.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "093d33d3-2feb-4e6b-97e3-101547d1fe1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction for fruit with features [110, 0]: apple\n",
+      "Prediction for fruit with features [140, 1]: orange\n",
+      "Prediction for fruit with features [160, 1]: orange\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "# Training data: (weight, texture), label\n",
+    "X_train = [[100, 0], [120, 0], [130, 1], [150, 1], [180, 1]]\n",
+    "y_train = [0, 0, 1, 1, 1] # 0: apple, 1: orange\n",
+    "\n",
+    "# Create and fit the kNN model\n",
+    "k = 3 # Number of neighbors\n",
+    "knn_model = KNeighborsClassifier(n_neighbors=k)\n",
+    "knn_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Test data: (weight, texture)\n",
+    "X_test = [[110, 0], [140, 1], [160, 1]]\n",
+    "\n",
+    "# Predict the labels for test data\n",
+    "predictions = knn_model.predict(X_test)\n",
+    "\n",
+    "# Map labels to fruit names\n",
+    "fruit_names = {0: 'apple', 1: 'orange'}\n",
+    "\n",
+    "# Output predictions\n",
+    "for i, pred in enumerate(predictions):\n",
+    "    print(f\"Prediction for fruit with features {X_test[i]}: {fruit_names[pred]}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "990ceed6-c388-4229-aac1-580dafef7a78",
+   "id": "71e8e034-cc28-492f-9a27-531e0a73fdfa",
    "metadata": {},
    "outputs": [],
    "source": []
