--- a/ml_basics_part2 (classification)/ml_basics_part2_classification.ipynb
+++ b/ml_basics_part2 (classification)/ml_basics_part2_classification.ipynb
@@ -4451,9 +4451,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e8a82289-76f4-44cb-bc07-4bd70d98df80",
+   "metadata": {},
+   "source": [
+    "## Note: ## In this example, the kNN model is trained using the training data X_train and y_train, where X_train contains features (weight and texture) of fruits, and y_train contains corresponding labels (0 for apple, 1 for orange). Then, we use the trained model to predict the labels for the test data X_test. Finally, the predictions are printed out along with the corresponding fruit names."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71e8e034-cc28-492f-9a27-531e0a73fdfa",
+   "id": "0df832fb-69df-4a40-a457-2b730f45284e",
    "metadata": {},
    "outputs": [],
    "source": []
