Hierarchical Clustering with Dendrogram Visualization

--- a/ml_basics_part2 (classification)/ml_basics_part2_classification.ipynb
+++ b/ml_basics_part2 (classification)/ml_basics_part2_classification.ipynb
@@ -6133,9 +6133,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cb666353-1892-4ead-93a9-cc96721ad355",
+   "metadata": {},
+   "source": [
+    "\n",
+    "---\n",
+    "\n",
+    "# Hierarchical Clustering with Dendrogram Visualization\n",
+    "\n",
+    "## Objective\n",
+    "\n",
+    "Perform **hierarchical clustering** on a sample dataset and visualize the resulting **dendrogram**.\n",
+    "\n",
+    "## Input\n",
+    "\n",
+    "* Sample dataset\n",
+    "\n",
+    "## Output\n",
+    "\n",
+    "* Dendrogram visualization showing the hierarchical cluster structure\n",
+    "\n",
+    "---\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fef3f48-eb46-483e-a3db-915e96ee2116",
+   "id": "78f4919b-881c-4df3-a495-bad2dab61801",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.cluster.hierarchy import dendrogram, linkage\n",
+    "\n",
+    "# Sample data\n",
+    "X = np.array([[1, 2], [2.5, 5], [3, 6], [8, 7], [7, 4], [10, 6]])\n",
+    "\n",
+    "# Perform hierarchical clustering\n",
+    "linkage_matrix = linkage(X, method='ward') # Using Ward's method for linkage\n",
+    "\n",
+    "# Plot the dendrogram\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "dendrogram(linkage_matrix)\n",
+    "plt.title('Hierarchical Clustering Dendrogram')\n",
+    "plt.xlabel('Sample Index')\n",
+    "plt.ylabel('Distance')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f58b8f33-b42a-4878-bb3c-ba66e30c90a5",
    "metadata": {},
    "outputs": [],
    "source": []
