Hyperparameter Tuning with GridSearchCV

--- a/ml_basics_part2 (classification)/ml_basics_part2_classification.ipynb
+++ b/ml_basics_part2 (classification)/ml_basics_part2_classification.ipynb
@@ -6467,9 +6467,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eed77cfc-598f-4e76-a84d-f3a2bf5e5b84",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# Hyperparameter Tuning\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f03b2760-2308-46df-a93c-10cb415407d1",
+   "id": "f47fdf03-c617-4217-9a4a-a35a4ea4256c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.datasets import load_iris\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "# Load the dataset\n",
+    "iris = load_iris()\n",
+    "X = iris.data\n",
+    "y = iris.target\n",
+    "\n",
+    "# Split the dataset into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Define the model\n",
+    "model = RandomForestClassifier()\n",
+    "\n",
+    "# Define hyperparameters to search\n",
+    "param_grid = {\n",
+    " 'n_estimators': [50, 100, 200],\n",
+    " 'max_depth': [None, 5, 10],\n",
+    " 'min_samples_split': [2, 5, 10],\n",
+    " 'min_samples_leaf': [1, 2, 4]\n",
+    "}\n",
+    "\n",
+    "\n",
+    "# Perform grid search with cross-validation\n",
+    "grid_search = GridSearchCV(estimator=model, param_grid=param_grid, cv=5, \n",
+    "scoring='accuracy')\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "# Print the best hyperparameters and score\n",
+    "print(\"Best Hyperparameters:\", grid_search.best_params_)\n",
+    "print(\"Best Score:\", grid_search.best_score_)\n",
+    "\n",
+    "# Evaluate the model with the best hyperparameters on the test set\n",
+    "best_model = grid_search.best_estimator_\n",
+    "test_score = best_model.score(X_test, y_test)\n",
+    "print(\"Test Score:\", test_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5baa243-7c85-4588-9166-eb84159103b6",
    "metadata": {},
    "outputs": [],
    "source": []
