add additional classification algorithms and code examples to part 3 notebook

--- a/ml_basics_part2 (classification)/ml_basics_part2_classification.ipynb
+++ b/ml_basics_part2 (classification)/ml_basics_part2_classification.ipynb
@@ -6478,10 +6478,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f47fdf03-c617-4217-9a4a-a35a4ea4256c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Hyperparameters: {'max_depth': None, 'min_samples_leaf': 1, 'min_samples_split': 10, 'n_estimators': 50}\n",
+      "Best Score: 0.9666666666666666\n",
+      "Test Score: 1.0\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.datasets import load_iris\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
@@ -6523,12 +6533,48 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d5baa243-7c85-4588-9166-eb84159103b6",
+   "cell_type": "markdown",
+   "id": "ba54ba72-6731-40c1-affb-172cddc21981",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "---\n",
+    "\n",
+    "# Hyperparameter Tuning with GridSearchCV\n",
+    "\n",
+    "## Steps\n",
+    "\n",
+    "1. **Load Dataset**\n",
+    "\n",
+    "   * Load the **Iris dataset**.\n",
+    "   * Split into **training** and **testing** sets.\n",
+    "\n",
+    "2. **Define Model**\n",
+    "\n",
+    "   * Use a **RandomForestClassifier** as the base model.\n",
+    "\n",
+    "3. **Define Hyperparameter Grid**\n",
+    "\n",
+    "   * Create a `param_grid` dictionary specifying hyperparameters to search over.\n",
+    "\n",
+    "4. **Perform Grid Search**\n",
+    "\n",
+    "   * Use **GridSearchCV** with **5-fold cross-validation** to find the best hyperparameters.\n",
+    "\n",
+    "5. **Best Parameters & Training Score**\n",
+    "\n",
+    "   * Print the best hyperparameters.\n",
+    "   * Print the best training score achieved.\n",
+    "\n",
+    "6. **Evaluate on Test Set**\n",
+    "\n",
+    "   * Evaluate the model with the best hyperparameters.\n",
+    "   * Print the **test score**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
