code example of k-Nearest Neighbors (kNN) Classifier

--- a/ml_basics_part3 (classification).ipynb
+++ b/ml_basics_part3 (classification).ipynb
@@ -119,8 +119,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e6085ab9-3ccb-420e-9653-1f5d2aac1953",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      setosa       1.00      1.00      1.00        10\n",
+      "  versicolor       1.00      1.00      1.00         9\n",
+      "   virginica       1.00      1.00      1.00        11\n",
+      "\n",
+      "    accuracy                           1.00        30\n",
+      "   macro avg       1.00      1.00      1.00        30\n",
+      "weighted avg       1.00      1.00      1.00        30\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Detailed classification report\n",
+    "print(\"\\nClassification Report:\")\n",
+    "print(classification_report(y_test, y_pred, target_names=iris.target_names))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ceda931c-6c28-445c-8c24-2c5c32f44cb7",
+   "metadata": {},
+   "source": [
+    "# k-Nearest Neighbors (kNN) Classifier\n",
+    "\n",
+    "##  Overview\n",
+    "This code demonstrates the **k-Nearest Neighbors (kNN)** algorithm for **binary classification**.  \n",
+    "Instead of using a real dataset, we generate a **synthetic dataset** with `make_classification()` from scikit-learn.  \n",
+    "\n",
+    "The goal: Train a kNN classifier to correctly classify samples into two classes (0 or 1).\n",
+    "\n",
+    "---\n",
+    "\n",
+    "##  Steps in the Code\n",
+    "\n",
+    "### 1. Import Libraries\n",
+    "- `make_classification` → generates a synthetic dataset.  \n",
+    "- `train_test_split` → splits data into train/test sets.  \n",
+    "- `KNeighborsClassifier` → the kNN algorithm.  \n",
+    "- `accuracy_score`, `precision_score`, `recall_score`, `f1_score` → evaluation metrics.  \n",
+    "\n",
+    "### 2. Generate Dataset\n",
+    "- `make_classification(n_samples=1000, n_features=20, n_classes=2)`  \n",
+    "  - Creates **1000 samples**.  \n",
+    "  - Each sample has **20 features**.  \n",
+    "  - There are **2 possible classes** (binary classification).  \n",
+    "\n",
+    "### 3. Split the Data\n",
+    "- `train_test_split()` splits into:\n",
+    "  - **80% training data** (to train the model).  \n",
+    "  - **20% testing data** (to evaluate the model).  \n",
+    "\n",
+    "### 4. Train the kNN Model\n",
+    "- `KNeighborsClassifier(n_neighbors=5)` → uses the **5 nearest neighbors** to classify a sample.  \n",
+    "- `.fit(X_train, y_train)` trains the model.  \n",
+    "\n",
+    "### 5. Make Predictions\n",
+    "- `.predict(X_test)` predicts the class labels for test data.  \n",
+    "\n",
+    "### 6. Evaluate the Model\n",
+    "The following performance metrics are calculated:\n",
+    "- **Accuracy** → Overall correctness of the model.  \n",
+    "- **Precision** → Of the predicted positives, how many were correct.  \n",
+    "- **Recall** → Of the actual positives, how many were correctly identified.  \n",
+    "- **F1-score** → Balance between precision and recall.  \n",
+    "\n",
+    "### 7. Print Results\n",
+    "The performance metrics are displayed with 4 decimal places for readability.  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "##  Summary\n",
+    "This example shows how to:  \n",
+    "1. Generate a synthetic dataset.  \n",
+    "2. Train a **k-Nearest Neighbors (kNN)** model.  \n",
+    "3. Evaluate it using **common classification metrics**.  \n",
+    "\n",
+    "kNN is a simple yet powerful algorithm that classifies a new data point based on the majority class of its **nearest neighbors**.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8c52f02f-6543-4db0-b04f-a5ddb7f9d948",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Performance Metrics:\n",
+      "Accuracy: 0.8100\n",
+      "Precision: 0.8791\n",
+      "Recall: 0.7477\n",
+      "F1-score: 0.8081\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import make_classification\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "\n",
+    "# Generate synthetic dataset for binary classification\n",
+    "X, y = make_classification(n_samples=1000, n_features=20, n_classes=2, random_state=42)\n",
+    "\n",
+    "# Split dataset into training and testing sets (80% train, 20% test)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Create and train kNN classifier\n",
+    "knn = KNeighborsClassifier(n_neighbors=5)\n",
+    "knn.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict labels for test data\n",
+    "y_pred = knn.predict(X_test)\n",
+    "\n",
+    "# Calculate performance metrics\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "precision = precision_score(y_test, y_pred)\n",
+    "recall = recall_score(y_test, y_pred)\n",
+    "f1 = f1_score(y_test, y_pred)\n",
+    "\n",
+    "# Output performance metrics\n",
+    "print(\"Performance Metrics:\")\n",
+    "print(f\"Accuracy: {accuracy:.4f}\")\n",
+    "print(f\"Precision: {precision:.4f}\")\n",
+    "print(f\"Recall: {recall:.4f}\")\n",
+    "print(f\"F1-score: {f1:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c6fd7f3-5364-41ea-a2ee-7f9cb55b68f4",
    "metadata": {},
    "outputs": [],
    "source": []
