applying Support Vector Machine (SVM) with ROC Curve code example

--- a/ml_basics_part3 (classification).ipynb
+++ b/ml_basics_part3 (classification).ipynb
@@ -262,12 +262,60 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7c6fd7f3-5364-41ea-a2ee-7f9cb55b68f4",
+   "cell_type": "markdown",
+   "id": "921041f6-f482-4d8c-a634-d110bf6fb163",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#  Support Vector Machine (SVM) with ROC Curve\n",
+    "\n",
+    "##  Overview\n",
+    "This code shows how to train a **Support Vector Machine (SVM)** classifier for binary classification, and then evaluate its performance using the **ROC curve** and **AUC (Area Under the Curve)**.  \n",
+    "\n",
+    "The ROC curve helps visualize the **trade-off between True Positive Rate and False Positive Rate**, while the AUC gives a single number to summarize performance.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🛠️ Steps in the Code\n",
+    "\n",
+    "### 1. Import Libraries\n",
+    "- **NumPy** → numerical operations.  \n",
+    "- **Matplotlib** → plotting.  \n",
+    "- **scikit-learn** → dataset generation, SVM model, splitting, and metrics.  \n",
+    "\n",
+    "### 2. Generate Dataset\n",
+    "- `make_classification()` creates a **synthetic binary dataset** with:  \n",
+    "  - **1000 samples**  \n",
+    "  - **20 features**  \n",
+    "  - **2 classes**  \n",
+    "\n",
+    "### 3. Split the Data\n",
+    "- `train_test_split()` → splits data into **80% training** and **20% testing**.  \n",
+    "\n",
+    "### 4. Train the SVM Model\n",
+    "- `SVC(probability=True)` → creates an SVM classifier with probability estimates enabled (needed for ROC).  \n",
+    "- `.fit(X_train, y_train)` → trains the model.  \n",
+    "\n",
+    "### 5. Predict Probabilities\n",
+    "- `.predict_proba(X_test)[:, 1]` → gets the probability of class **1** (positive class).  \n",
+    "\n",
+    "### 6. Compute ROC & AUC\n",
+    "- `roc_curve(y_test, y_prob)` → calculates **False Positive Rate (FPR)**, **True Positive Rate (TPR)**, and thresholds.  \n",
+    "- `auc(fpr, tpr)` → computes the **Area Under the Curve (AUC)**.  \n",
+    "\n",
+    "### 7. Plot ROC Curve\n",
+    "- X-axis → **False Positive Rate (FPR)**  \n",
+    "- Y-axis → **True Positive Rate (TPR)**  \n",
+    "- The diagonal line (`[0,1]`) represents random guessing.  \n",
+    "- The closer the ROC curve is to the **top-left corner**, the better the classifier.  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "## ✅ Summary\n",
+    "- Trained an **SVM classifier** on synthetic binary data.  \n",
+    "- Evaluated performance using **ROC curve** and **AUC score**.  \n",
+    "- **ROC Curve** → shows the balance between sensitivity (TPR) and fallout (FPR).  \n",
+    "- **AUC** → a single score where **1.0 = perfect classifier**, and **0.5 = random guessing**.\n"
+   ]
   }
  ],
  "metadata": {
