Feature extraction using PCA

--- a/ml_basics_part3 (classification)/ml_basics_part3 _classification.ipynb
+++ b/ml_basics_part3 (classification)/ml_basics_part3 _classification.ipynb
@@ -780,8 +780,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "2fcf5dc0-3ff9-4dc2-b899-ba3825f843b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy with original features: 0.975\n",
+      "Accuracy with PCA-extracted features: 0.6472222222222223\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Feature extraction using PCA\n",
+    "pca = PCA(n_components=2) # Extract 2 principal components\n",
+    "X_train_pca = pca.fit_transform(X_train)\n",
+    "X_test_pca = pca.transform(X_test)\n",
+    "\n",
+    "# Train a logistic regression model on the original features\n",
+    "lr = LogisticRegression(max_iter=1000)\n",
+    "lr.fit(X_train, y_train)\n",
+    "y_pred_train = lr.predict(X_train)\n",
+    "y_pred_test = lr.predict(X_test)\n",
+    "accuracy_original = accuracy_score(y_test, y_pred_test)\n",
+    "\n",
+    "# Train a logistic regression model on the PCA-extracted features\n",
+    "lr_pca = LogisticRegression(max_iter=1000)\n",
+    "lr_pca.fit(X_train_pca, y_train)\n",
+    "y_pred_train_pca = lr_pca.predict(X_train_pca)\n",
+    "y_pred_test_pca = lr_pca.predict(X_test_pca)\n",
+    "accuracy_pca = accuracy_score(y_test, y_pred_test_pca)\n",
+    "\n",
+    "# Print the accuracy of both models\n",
+    "print(f\"Accuracy with original features: {accuracy_original}\")\n",
+    "print(f\"Accuracy with PCA-extracted features: {accuracy_pca}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a802e00-21f8-4dcb-b9cb-f5aa09bdb186",
    "metadata": {},
    "outputs": [],
    "source": []
