Remove duplicates from noisey data

--- a/ml_basics_part3 (classification)/ml_basics_part3 _classification.ipynb
+++ b/ml_basics_part3 (classification)/ml_basics_part3 _classification.ipynb
@@ -820,8 +820,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "4a802e00-21f8-4dcb-b9cb-f5aa09bdb186",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original DataFrame:\n",
+      "     A    B    C\n",
+      "0  1.0  NaN  1.0\n",
+      "1  2.0  2.0  2.0\n",
+      "2  NaN  3.0  3.0\n",
+      "3  4.0  4.0  NaN\n",
+      "4  5.0  NaN  5.0\n",
+      "\n",
+      "DataFrame after imputation:\n",
+      "     A    B     C\n",
+      "0  1.0  3.0  1.00\n",
+      "1  2.0  2.0  2.00\n",
+      "2  3.0  3.0  3.00\n",
+      "3  4.0  4.0  2.75\n",
+      "4  5.0  3.0  5.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "# Create a sample DataFrame with missing values\n",
+    "data = {\n",
+    " 'A': [1, 2, None, 4, 5],\n",
+    " 'B': [None, 2, 3, 4, None],\n",
+    " 'C': [1, 2, 3, None, 5]\n",
+    "}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Impute missing values with mean\n",
+    "imputer = SimpleImputer(strategy='mean')\n",
+    "imputed_data = imputer.fit_transform(df)\n",
+    "\n",
+    "# Convert the imputed data back to a DataFrame\n",
+    "df_imputed = pd.DataFrame(imputed_data, columns=df.columns)\n",
+    "print(\"Original DataFrame:\")\n",
+    "print(df)\n",
+    "print(\"\\nDataFrame after imputation:\")\n",
+    "print(df_imputed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b7278a95-4553-4d22-8d3a-f4e4fc509cf8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original DataFrame:\n",
+      "     A    B    C\n",
+      "0  1.0  NaN  1.0\n",
+      "1  2.0  2.0  2.0\n",
+      "2  NaN  3.0  3.0\n",
+      "3  4.0  4.0  NaN\n",
+      "4  5.0  NaN  5.0\n",
+      "\n",
+      "DataFrame after removing rows with missing values:\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "# Create a sample DataFrame with missing values\n",
+    "data = {\n",
+    "    'A': [1, 2, None, 4, 5],\n",
+    "    'B': [None, 2, 3, 4, None],\n",
+    "    'C': [1, 2, 3, None, 5]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Remove rows with missing values\n",
+    "df_cleaned = df.dropna()\n",
+    "print(\"Original DataFrame:\")\n",
+    "print(df)\n",
+    "print(\"\\nDataFrame after removing rows with missing values:\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c3f0c6a3-1983-4e0a-94d1-399051980f81",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original DataFrame:\n",
+      "   Name   Age  Salary\n",
+      "0  John  25.0   50000\n",
+      "1  Jane  30.0   60000\n",
+      "2  John  25.0   50000\n",
+      "3  Jake  35.0   70000\n",
+      "4  John   NaN   55000\n",
+      "5  Jane  30.0   60000\n",
+      "\n",
+      "DataFrame after removing duplicates and noisy data:\n",
+      "   Name   Age  Salary\n",
+      "0  John  25.0   50000\n",
+      "1  Jane  30.0   60000\n",
+      "3  Jake  35.0   70000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Sample DataFrame with noisy and duplicate data\n",
+    "data = {\n",
+    "    'Name': ['John', 'Jane', 'John', 'Jake', 'John', 'Jane'],\n",
+    "    'Age': [25, 30, 25, 35, None, 30],\n",
+    "    'Salary': [50000, 60000, 50000, 70000, 55000, 60000]\n",
+    "}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Display the original DataFrame\n",
+    "print(\"Original DataFrame:\")\n",
+    "print(df)\n",
+    "\n",
+    "# Remove duplicates\n",
+    "df_unique = df.drop_duplicates()\n",
+    "\n",
+    "# Remove rows with missing values (noise removal)\n",
+    "df_cleaned = df_unique.dropna()\n",
+    "\n",
+    "# Display the cleaned DataFrame\n",
+    "print(\"\\nDataFrame after removing duplicates and noisy data:\")\n",
+    "print(df_cleaned)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c4a818b-e7a1-46ad-85a0-538c791386df",
    "metadata": {},
    "outputs": [],
    "source": []
