--- a/ml_basics_part3 (classification)/ml_basics_part3 _classification.ipynb
+++ b/ml_basics_part3 (classification)/ml_basics_part3 _classification.ipynb
@@ -964,9 +964,91 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3601f0f5-7dc0-47b8-86c1-93cdd0841dfd",
+   "metadata": {},
+   "source": [
+    "## AdaBoost (Adaptive Boosting)\n",
+    "\n",
+    "**What is AdaBoost?**  \n",
+    "AdaBoost (short for *Adaptive Boosting*) is an **ensemble learning method** that combines multiple \"weak learners\" (usually Decision Trees with shallow depth) to create a **strong classifier**.  \n",
+    "- A weak learner is a model that performs just slightly better than random guessing.  \n",
+    "- AdaBoost improves the performance by training several weak learners sequentially, where each new model focuses more on the mistakes made by the previous ones.  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "### How it works:\n",
+    "1. **Start with equal weights** for all training samples.  \n",
+    "2. **Train a weak learner** (e.g., Decision Tree with depth=1).  \n",
+    "3. **Increase the weight** of misclassified samples so that the next learner focuses more on them.  \n",
+    "4. Repeat the process with multiple learners (e.g., 50 trees).  \n",
+    "5. Final prediction is a weighted vote of all weak learners.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Code Explanation:\n",
+    "- `DecisionTreeClassifier(max_depth=1)` → A shallow decision tree (stump) is used as the weak learner.  \n",
+    "- `AdaBoostClassifier(estimator=base_estimator, n_estimators=50)` → Combines 50 weak learners into a strong classifier.  \n",
+    "- `fit(X_train, y_train)` → Trains the model on the training set.  \n",
+    "- `predict(X_test)` → Makes predictions on the test set.  \n",
+    "- `accuracy_score` → Evaluates the performance of the model.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Why AdaBoost?\n",
+    "- Often more accurate than a single decision tree.  \n",
+    "- Works well on both simple and complex datasets.  \n",
+    "- Robust to overfitting if weak learners are kept simple (like stumps).  \n",
+    "\n",
+    " **Note**: In older versions of `scikit-learn (<1.2)`, you need to use `base_estimator` instead of `estimator`.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8707016a-d621-4db6-9bfe-a762345aaab4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.875\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import tree\n",
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "from sklearn.datasets import make_classification\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Generate some synthetic data for demonstration\n",
+    "X, y = make_classification(n_samples=1000, n_features=20, n_classes=2, random_state=42)\n",
+    "\n",
+    "# Split the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Initialize AdaBoost classifier with a base estimator (e.g., DecisionTreeClassifier)\n",
+    "base_estimator = tree.DecisionTreeClassifier(max_depth=1) # You can choose different base estimators\n",
+    "ada_boost = AdaBoostClassifier(estimator=None, n_estimators=50, random_state=42)\n",
+    "\n",
+    "# Train the AdaBoost model\n",
+    "ada_boost.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions\n",
+    "predictions = ada_boost.predict(X_test)\n",
+    "\n",
+    "# Calculate accuracy\n",
+    "accuracy = accuracy_score(y_test, predictions)\n",
+    "print(\"Accuracy:\", accuracy)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c4a818b-e7a1-46ad-85a0-538c791386df",
+   "id": "6343f966-ee59-41d7-bb88-d7ac87b1374c",
    "metadata": {},
    "outputs": [],
    "source": []
