Implemented XGBoost model on synthetic dataset with performance check

--- a/ml_basics_part3 (classification)/ml_basics_part3 _classification.ipynb
+++ b/ml_basics_part3 (classification)/ml_basics_part3 _classification.ipynb
@@ -1046,9 +1046,107 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ecd2334a-7370-4e1a-b9cb-a0a4d7a8ccfd",
+   "metadata": {},
+   "source": [
+    "## XGBoost Classifier\n",
+    "\n",
+    "### What is XGBoost?\n",
+    "- **XGBoost (Extreme Gradient Boosting)** is a powerful machine learning algorithm based on decision trees.  \n",
+    "- It belongs to the family of **boosting methods**, which means it builds multiple weak learners (small decision trees) and combines them to form a strong predictive model.  \n",
+    "- XGBoost is known for its **speed and high performance** in both classification and regression tasks.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Code Walkthrough\n",
+    "1. **Generate Dataset**\n",
+    "   - We use `make_classification` to create a synthetic dataset with 1000 samples and 20 features.  \n",
+    "   - The task is a **binary classification problem** (2 classes).  \n",
+    "\n",
+    "2. **Train-Test Split**\n",
+    "   - The dataset is split into **80% training** and **20% testing** using `train_test_split`.  \n",
+    "\n",
+    "3. **Initialize XGBoost**\n",
+    "   - `XGBClassifier` is initialized with:\n",
+    "     - `n_estimators=100` → Number of trees in the ensemble.\n",
+    "     - `learning_rate=0.1` → Controls how much each new tree contributes.\n",
+    "     - `random_state=42` → Ensures reproducibility.  \n",
+    "\n",
+    "4. **Model Training**\n",
+    "   - The model is trained using `.fit(X_train, y_train)`.  \n",
+    "\n",
+    "5. **Prediction**\n",
+    "   - `.predict(X_test)` is used to generate predictions for the test set.  \n",
+    "\n",
+    "6. **Evaluation**\n",
+    "   - Accuracy is calculated using `accuracy_score`, which compares predicted labels to true labels.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Output\n",
+    "- The code prints out the **accuracy** of the XGBoost model on the test set.  \n",
+    "- A high accuracy indicates that the ensemble of boosted decision trees is performing well on the dataset.\n",
+    "\n",
+    "---\n",
+    "\n",
+    " **Takeaway:**  \n",
+    "XGBoost is a robust, scalable algorithm widely used in competitions and real-world applications. It often outperforms simpler models like Decision Trees or Random Forests due to its **boosting strategy**.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b04a0fdc-cb55-4b3e-8a90-fe0bd93931de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/psycho/anaconda3/envs/ml_env/lib/python3.10/site-packages/xgboost/core.py:377: FutureWarning: Your system has an old version of glibc (< 2.28). We will stop supporting Linux distros with glibc older than 2.28 after **May 31, 2025**. Please upgrade to a recent Linux distro (with glibc >= 2.28) to use future versions of XGBoost.\n",
+      "Note: You have installed the 'manylinux2014' variant of XGBoost. Certain features such as GPU algorithms or federated learning are not available. To use these features, please upgrade to a recent Linux distro with glibc 2.28+, and install the 'manylinux_2_28' variant.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.885\n"
+     ]
+    }
+   ],
+   "source": [
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.datasets import make_classification\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Generate some synthetic data for demonstration\n",
+    "X, y = make_classification(n_samples=1000, n_features=20, n_classes=2, random_state=42)\n",
+    "\n",
+    "# Split the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Initialize XGBoost classifier\n",
+    "xgb = XGBClassifier(n_estimators=100, learning_rate=0.1, random_state=42)\n",
+    "\n",
+    "# Train the XGBoost model\n",
+    "xgb.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions\n",
+    "predictions = xgb.predict(X_test)\n",
+    "\n",
+    "# Calculate accuracy\n",
+    "accuracy = accuracy_score(y_test, predictions)\n",
+    "print(\"Accuracy:\", accuracy)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6343f966-ee59-41d7-bb88-d7ac87b1374c",
+   "id": "a802f9bd-97f4-4d41-a693-7c5c6bb2c257",
    "metadata": {},
    "outputs": [],
    "source": []
